--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="D:/내폴더(삭제금지)/Downloads/cos-2020.4.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
